kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: req-counter-service
spec:
  selector:
    app: req-counter-app
  ports:
  - port: 80
    targetPort: 8080
