kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: req-counter-ingress
  labels:
    name: req-counter-ingress
spec:
  rules:
  - host: etiwole.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: req-counter-service
            port:
              number: 80
